--- a/style.css
+++ b/style.css
@@ -53,6 +53,18 @@ table {
  * ###################
  */
 
+
+#content{
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-auto-rows: minmax(100px, auto);
+	grid-gap: 10px;
+	max-width: 960px;
+	margin: 0 auto;
+	position:relative;
+	/* from https://github.com/iamshaunjp/css-grid-playlist/blob/lesson-7/index.html */
+}
+
 h1 {
 	color: orangered;
 	font-size: 4rem;
@@ -77,6 +89,13 @@ p {
 	margin-bottom: 10px;
 }
 
+#p1{
+	grid-column: 1 / 5;
+}
+
+#p2{
+	grid-column: 8 / 12;
+}
 
 header {
 	width: 100%;
@@ -85,6 +104,7 @@ header {
 	top: 0;
 	left: 0;
 	background-color: green;
+	grid-column: 1 / 13;
 }
 
 footer {
@@ -94,6 +114,7 @@ footer {
 	top: 0;
 	left: 0;
 	background-color: green;
+	grid-column: 1 / 13;
 }
 
 li {
@@ -103,14 +124,3 @@ li {
 }
 
 /* header and footer from https://stackoverflow.com/questions/22551730/how-to-change-header-and-footer-to-full-width */
-
-#content{
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-auto-rows: minmax(100px, auto);
-	grid-gap: 10px;
-	max-width: 960px;
-	margin: 0 auto;
-	position:relative;
-	/* from https://github.com/iamshaunjp/css-grid-playlist/blob/lesson-7/index.html */
-}
